address review feedback
Signed-off-by: Xin Li <xin@hashgraph.com>